# gtpsa

./: .directoryhash  .gitignore  .nfs00000001a1f0715000000bd9  CMakeLists.txt  bug  bug.jl  bug_inplace  build_tarballs.jl  cmake_install.cmake  compare.txt  compare2.txt  pull_from_mad_git
code/: bug.c  mad_bit.c  mad_bit.h  mad_cst.c  mad_ctpsa.h  mad_ctpsa_impl.h  mad_def.h  mad_desc.c  mad_desc_impl.h  mad_log.h  mad_mat.c  mad_mat.h  mad_mem.c  mad_mem.h  mad_mono.c  mad_mono.h  mad_num.c  mad_num.h  mad_omp.h  mad_str.c  mad_tpsa.c  mad_tpsa.h  mad_tpsa_comp.c  mad_tpsa_impl.h  mad_tpsa_io.c  mad_tpsa_mops.c  mad_tpsa_ops.c  mad_vec.c  mad_vec.h
